--- a/index.html
+++ b/index.html
@@ -82,12 +82,15 @@
                     <h4>mafi fashion</h4>
                     <p>I created  a dynamic and engaging platform that showcases the brand’s identity through modern web design principles.Incorporating smooth animations throughout the site enhances visual interest and guides users through the content seamlessly. These animations are designed to be subtle yet impactful, ensuring they do not distract from the main message but rather complement the overall user experience.d.</p>
                 </div>
+                </div>
+                <div class="view now"><a href="https://hosanna1616.github.io/mafimafi/h.html">view the project</a></div>
             </div>
             <div class="service-box">
                 <div class="service-info">
                     <h4>jeon beauty</h4>
                     <p>I  designed Jeon Beauty to showcase a range of high-quality makeup products, emphasizing both aesthetics and functionality. The site features a modern and engaging layout that reflects the brand’s commitment to beauty and innovation. </p>
                 </div>
+                 <div class="view"><a href="https://hosanna1616.github.io/jeon/home.html">view the project</a></div>
             </div>
         </div>
     </section>
